[gd_scene load_steps=3 format=3 uid="uid://0w6g4f1p5gwe"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/obj_editors/PolygonNodePropertyEditor/PolygonNodePropertyEditor.gd" id="1_st6t6"]
[ext_resource type="PackedScene" uid="uid://dinchpfl3oh55" path="res://scenes/ui/ProjectEditor/obj_editors/WorldObjectPropertyEditor/WorldObjectPropertyEditor.tscn" id="2_xptek"]

[node name="PolygonNodePropertiesList" instance=ExtResource("2_xptek")]
script = ExtResource("1_st6t6")

[node name="Label2" type="Label" parent="VBoxContainer/PropertiesList" index="2"]
layout_mode = 2
text = "Color: "

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer/PropertiesList" index="3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Total spray angle or rotor's swept angle"

[connection signal="color_changed" from="VBoxContainer/PropertiesList/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="popup_closed" from="VBoxContainer/PropertiesList/ColorPicker" to="." method="_on_color_picker_popup_closed"]
[connection signal="pressed" from="VBoxContainer/PropertiesList/ColorPicker" to="." method="_on_color_picker_pressed"]
